--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,6 @@
-click==6.7
-eventlet==0.23.0
 Flask==1.0.2
-Flask-SocketIO==3.0.0
-Flask-Sockets==0.2.1
-gevent==1.3.2.post0
-gevent-websocket==0.10.1
-greenlet==0.4.13
-gunicorn==19.8.1
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-pkg-resources==0.0.0
-python-engineio==2.1.1
-python-socketio==1.9.0
-six==1.11.0
-Werkzeug==0.14.1
+Flask-Sockets
+eventlet
+gevent
+gevent-websocket
+gunicorn
